# beam-marketing-pipeline

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: accounts.json  lead_classification_rules.json
data/fixtures/: adobe_analytics.parquet  create_fixtures.py  crm_2026-04-10.csv  ga4.json
docs/: CI-CD.md  PAST_ARCHITECTURE.md  RUNBOOK.md  TESTING_STRATEGY.md  architecture.d2
pipeline/: ingest.py  main.py  options.py
pipeline/normalize/: analytics.py  crm.py
pipeline/schemas/: analytics.py  table_record.py
pipeline/sinks/: bigquery.py  dead_letter.py  write.py
pipeline/sources/: adobe.py  crm.py  ga4.py
pipeline/transforms/: classification.py  dedup_crm.py  join.py
pipeline/utils/: config.py  metrics.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/normalize/: test_analytics.py  test_crm.py
tests/unit/sinks/: test_dead_letter.py
tests/unit/sources/: test_adobe.py  test_crm.py  test_ga4.py
tests/unit/transforms/: test_classification.py  test_dedup_crm.py  test_join.py
tests/unit/utils/: test_metrics.py
